--- a/singolo1.html
+++ b/singolo1.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="singolo2.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap&subset=latin-ext"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-    
-    
+
+    <header class="header">
+        <div class="container">
+            <h1 class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
+            <nav class="navigation">
+                <ul class="nav__list">
+                    <li class="nav__list-item"><span class="red-color-style">home</span></li>
+                    <li class="nav__list-item">services</li>
+                    <li class="nav__list-item">portfolio</li>
+                    <li class="nav__list-item">about</li>
+                    <li class="nav__list-item">contact</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header__decoration"></div>
+    </header>
 
 </body>
+
 </html>
