--- a/singolo1.html
+++ b/singolo1.html
@@ -18,16 +18,36 @@
             <h1 class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
             <nav class="navigation">
                 <ul class="nav__list">
-                    <li class="nav__list-item"><span class="red-color-style">home</span></li>
-                    <li class="nav__list-item">services</li>
-                    <li class="nav__list-item">portfolio</li>
-                    <li class="nav__list-item">about</li>
-                    <li class="nav__list-item">contact</li>
+                    <li class="nav__list-item"><span class="red-color-style"><a href="#" class="nav__link">home</a></span></li>
+                    <li class="nav__list-item"><a href="#" class="nav__link">services</a></li>
+                    <li class="nav__list-item"><a href="#" class="nav__link">portfolio</a></li>
+                    <li class="nav__list-item"><a href="#" class="nav__link">about</a></li>
+                    <li class="nav__list-item"><a href="#" class="nav__link">contact</a></li>
                 </ul>
             </nav>
         </div>
         <div class="header__decoration"></div>
     </header>
+
+    <main class="main">
+        <section class="slider-section">
+            <div class="slider-section__background">
+                <div class="wrapper">
+                    <div class="slider-section__wrapper">
+                        <div class="slider-section__image-one"></div>
+                        <div class="slider-section__image-two"></div>
+                    </div>
+                    <div class="slider-section__slider-left">
+                        <svg class="arrow" fill="" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"></path></svg>
+                    </div>
+                    <div class="slider-section__slider-right">
+                        <svg class="arrow" fill="" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"></path></svg>
+                    </div>
+                </div>
+            </div>
+            <div class="slider-section__decorative-block"></div>
+        </section>
+    </main>
 
 </body>
 
