--- a/singolo1.html
+++ b/singolo1.html
@@ -18,7 +18,8 @@
             <h1 class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
             <nav class="navigation">
                 <ul class="nav__list">
-                    <li class="nav__list-item"><span class="red-color-style"><a href="#" class="nav__link">home</a></span></li>
+                    <li class="nav__list-item"><span class="red-color-style"><a href="#"
+                                class="nav__link">home</a></span></li>
                     <li class="nav__list-item"><a href="#" class="nav__link">services</a></li>
                     <li class="nav__list-item"><a href="#" class="nav__link">portfolio</a></li>
                     <li class="nav__list-item"><a href="#" class="nav__link">about</a></li>
@@ -38,14 +39,86 @@
                         <div class="slider-section__image-two"></div>
                     </div>
                     <div class="slider-section__slider-left">
-                        <svg class="arrow" fill="" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"></path></svg>
+                        <svg class="arrow" fill="" aria-hidden="true" focusable="false" data-prefix="fas"
+                            data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                            <path
+                                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                            </path>
+                        </svg>
                     </div>
                     <div class="slider-section__slider-right">
-                        <svg class="arrow" fill="" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"></path></svg>
+                        <svg class="arrow" fill="" aria-hidden="true" focusable="false" data-prefix="fas"
+                            data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                            <path
+                                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                            </path>
+                        </svg>
                     </div>
                 </div>
             </div>
             <div class="slider-section__decorative-block"></div>
+        </section>
+
+        <section class="info-section">
+            <div class="wrapper">
+                <h2 class="info-section__title">Our Services</h2>
+                <p class="info-section__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+                    Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce
+                    dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                <ul class="info-section__list">
+                    <li class="info-section__list-item">
+                        <div class="info-section__list-icon pencil"></div>
+                        <div class="info-section__list-wrapper">
+                            <h3 class="info-section__list-title">Custom Design</h3>
+                            <p class="info-section__list-description">Curabitur vestibulum eget mauris quis laoreet.
+                                Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                        </div>
+                    </li>
+                    <li class="info-section__list-item">
+                        <div class="info-section__list-icon lamp"></div>
+                        <div class="info-section__list-wrapper">
+                            <h3 class="info-section__list-title">Inovative Ideas</h3>
+                            <p class="info-section__list-description">Quisque luctus, quam eget molestie commodo, lacus
+                                purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+                        </div>
+                    </li>
+                    <li class="info-section__list-item">
+                        <div class="info-section__list-icon heart"></div>
+                        <div class="info-section__list-wrapper">
+                            <h3 class="info-section__list-title">Love Is The Answer</h3>
+                            <p class="info-section__list-description">Nulla sed nunc et tortor luctus faucibus. Morbi at
+                                aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                        </div>
+                    </li>
+                    <li class="info-section__list-item">
+                        <div class="info-section__list-icon phone"></div>
+                        <div class="info-section__list-wrapper">
+                            <h3 class="info-section__list-title">Responsive Layout</h3>
+                            <p class="info-section__list-description">Sed porttitor placerat rhoncus. In at nunc tellus.
+                                Maecenas blandit nunc ligula. Praesent elit leo.</p>
+                        </div>
+                    </li>
+                    <li class="info-section__list-item">
+                        <div class="info-section__list-icon comment"></div>
+                        <div class="info-section__list-wrapper">
+                            <h3 class="info-section__list-title">24 / 7 Support</h3>
+                            <p class="info-section__list-description">Vivamus vel quam lacinia, tincidunt dui non,
+                                vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
+                        </div>
+                    </li>
+                    <li class="info-section__list-item">
+                        <div class="info-section__list-icon star"></div>
+                        <div class="info-section__list-wrapper">
+                            <h3 class="info-section__list-title">Feel Like A Star</h3>
+                            <p class="info-section__list-description">Quisque hendrerit purus dapibus, ornare nibh
+                                vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="info-section__decorate"></div>
         </section>
     </main>
 
