fix: fix html&css bugs in all blocks

--- a/singolo1.html
+++ b/singolo1.html
@@ -84,7 +84,7 @@
                                 purus cursus purus, nec rutrum tellus dolor id lorem.</p>
                         </div>
                     </li>
-                    <li class="info-section__list-item">
+                    <li class="info-section__list-item test-class">
                         <div class="info-section__list-icon heart"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Love Is The Answer</h3>
@@ -108,7 +108,7 @@
                                 vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
                         </div>
                     </li>
-                    <li class="info-section__list-item">
+                    <li class="info-section__list-item test-class">
                         <div class="info-section__list-icon star"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Feel Like A Star</h3>
