fix: try to fix code for pixelperfect

--- a/singolo1.html
+++ b/singolo1.html
@@ -80,7 +80,7 @@
                         <div class="info-section__list-icon lamp"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Inovative Ideas</h3>
-                            <p class="info-section__list-description">Quisque luctus, quam eget molestie commodo, lacus
+                            <p class="info-section__list-description">Quisque luctus, quam eget molestie com-<br>modo, lacus
                                 purus cursus purus, nec rutrum tellus dolor id lorem.</p>
                         </div>
                     </li>
@@ -97,7 +97,7 @@
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Responsive Layout</h3>
                             <p class="info-section__list-description">Sed porttitor placerat rhoncus. In at nunc tellus.
-                                Maecenas blandit nunc ligula. Praesent elit leo.</p>
+                                Maecenas blandit nunc ligula. Prae-<br>sent elit leo.</p>
                         </div>
                     </li>
                     <li class="info-section__list-item">
