feat: add Adaptivity

--- a/singolo1.html
+++ b/singolo1.html
@@ -14,9 +14,12 @@
 <body>
 
     <header class="header">
-        <div class="container">
+        <div class="header-container">
             <h1 class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
-            <nav class="navigation">
+            <nav class="nav">
+                <div class="nav__burger-container">
+                    <div class="nav__burger-button"></div>
+                </div>
                 <ul class="nav__list">
                     <li class="nav__list-item"><span class="red-color-style"><a href="#"
                                 class="nav__link">home</a></span></li>
@@ -80,7 +83,8 @@
                         <div class="info-section__list-icon lamp"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Inovative Ideas</h3>
-                            <p class="info-section__list-description">Quisque luctus, quam eget molestie com-<br>modo, lacus
+                            <p class="info-section__list-description">Quisque luctus, quam eget molestie com-<br>modo,
+                                lacus
                                 purus cursus purus, nec rutrum tellus dolor id lorem.</p>
                         </div>
                     </li>
@@ -122,6 +126,7 @@
         </section>
     </main>
 
+    <script src="./scripts/burger-button.js"></script>
 </body>
 
 </html>
