feat: add tablet adaptive, fix some bugs

--- a/singolo1.html
+++ b/singolo1.html
@@ -20,7 +20,7 @@
                 <div class="nav__burger-container">
                     <div class="nav__burger-button"></div>
                 </div>
-                <ul class="nav__list">
+                <ul class="nav__list hidden">
                     <li class="nav__list-item"><span class="red-color-style"><a href="#"
                                 class="nav__link">home</a></span></li>
                     <li class="nav__list-item"><a href="#" class="nav__link">services</a></li>
