--- a/singolo1.html
+++ b/singolo1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="singolo1.css">
+    <link rel="stylesheet" href="css/singolo1.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap&subset=latin-ext"
         rel="stylesheet">
     <title>Document</title>
@@ -21,7 +21,7 @@
                     <li class="nav__list-item"><span class="red-color-style"><a href="#"
                                 class="nav__link">home</a></span></li>
                     <li class="nav__list-item"><a href="#" class="nav__link">services</a></li>
-                    <li class="nav__list-item"><a href="#" class="nav__link">portfolio</a></li>
+                    <li class="nav__list-item"><a href="singolo2.html" class="nav__link">portfolio</a></li>
                     <li class="nav__list-item"><a href="#" class="nav__link">about</a></li>
                     <li class="nav__list-item"><a href="#" class="nav__link">contact</a></li>
                 </ul>
