--- a/singolo2.html
+++ b/singolo2.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap&subset=latin-ext"
         rel="stylesheet">
-    <link rel="stylesheet" href="singolo2.css">
+    <link rel="stylesheet" href="css/singolo2.css">
     <title>Document</title>
 </head>
 
