feat: add about-us block markup

--- a/singolo2.html
+++ b/singolo2.html
@@ -15,8 +15,8 @@
 
     <main class="main">
         <div class="wrapper">
-            <h1 class="main__title">Portfolio</h1>
-            <p class="main__description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia
+            <h2 class="main__title second-level-title">Portfolio</h2>
+            <p class="main__description section-description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia
                 odio
                 sem nec elit.</p>
             <nav class="main__nav">
@@ -68,6 +68,61 @@
         </div>
         <div class="main__bottom-decoration"></div>
     </main>
+
+    <article class="about-us">
+        <div class="wrapper">
+            <h2 class="about-us__title second-level-title">About Us</h2>
+            <p class="about-us__description section-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
+                mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus,
+                tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <div class="about-us__images-container">
+                <ul class="images-container__list">
+                    <li class="images-container__list-item">
+                        <img src="assets/photo-1.jpg" alt="" class="images-container__image">
+                        <h3 class="images-container__title third-level-title">Adam Jensen</h3>
+                        <p class="images-container__description">Quisque luctus, quam eget molestie commodo, lacus purus
+                            cursus purus, nec rutrum tellus dolor id lorem.</p>
+                        <div class="images-container__contacts-container">
+                            <ul class="contacts-container__list">
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="images-container__list-item">
+                        <img src="assets/photo-2.jpg" alt="" class="images-container__image">
+                        <h3 class="images-container__title third-level-title">Desmond Miles</h3>
+                        <p class="images-container__description">Curabitur vestibulum eget mauris quis laoreet.
+                            Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+                        <div class="images-container__contacts-container">
+                            <ul class="contacts-container__list">
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="images-container__list-item">
+                        <img src="assets/photo.jpg" alt="" class="images-container__image">
+                        <h3 class="images-container__title third-level-title">Scolara Visari</h3>
+                        <p class="images-container__description">Nulla sed nunc et tortor luctus faucibus. Morbi at
+                            aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                        <div class="images-container__contacts-container">
+                            <ul class="contacts-container__list">
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                                <li class="contacts-container__list-item"></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </article>
 
 </body>
 
