fix: fix some bugs

--- a/singolo2.html
+++ b/singolo2.html
@@ -122,6 +122,7 @@
                 </ul>
             </div>
         </div>
+        <div class="about-us__decoration-block"></div>
     </article>
 
 </body>
