--- a/singolo1.html
+++ b/singolo1.html
@@ -72,7 +72,7 @@
                     dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
                 <ul class="info-section__list">
                     <li class="info-section__list-item">
-                        <div class="info-section__list-icon pencil"></div>
+                        <div class="info-section__list-icon info-section__list-icon--pencil"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Custom Design</h3>
                             <p class="info-section__list-description">Curabitur vestibulum eget mauris quis laoreet.
@@ -80,7 +80,7 @@
                         </div>
                     </li>
                     <li class="info-section__list-item">
-                        <div class="info-section__list-icon lamp"></div>
+                        <div class="info-section__list-icon info-section__list-icon--lamp"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Inovative Ideas</h3>
                             <p class="info-section__list-description">Quisque luctus, quam eget molestie com-<br>modo,
@@ -89,7 +89,7 @@
                         </div>
                     </li>
                     <li class="info-section__list-item test-class">
-                        <div class="info-section__list-icon heart"></div>
+                        <div class="info-section__list-icon info-section__list-icon--heart"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Love Is The Answer</h3>
                             <p class="info-section__list-description">Nulla sed nunc et tortor luctus faucibus. Morbi at
@@ -97,7 +97,7 @@
                         </div>
                     </li>
                     <li class="info-section__list-item">
-                        <div class="info-section__list-icon phone"></div>
+                        <div class="info-section__list-icon info-section__list-icon--phone"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Responsive Layout</h3>
                             <p class="info-section__list-description">Sed porttitor placerat rhoncus. In at nunc tellus.
@@ -105,7 +105,7 @@
                         </div>
                     </li>
                     <li class="info-section__list-item">
-                        <div class="info-section__list-icon comment"></div>
+                        <div class="info-section__list-icon info-section__list-icon--comment"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">24 / 7 Support</h3>
                             <p class="info-section__list-description">Vivamus vel quam lacinia, tincidunt dui non,
@@ -113,7 +113,7 @@
                         </div>
                     </li>
                     <li class="info-section__list-item test-class">
-                        <div class="info-section__list-icon star"></div>
+                        <div class="info-section__list-icon info-section__list-icon--star"></div>
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">Feel Like A Star</h3>
                             <p class="info-section__list-description">Quisque hendrerit purus dapibus, ornare nibh
