feat: fix some bugs

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="info-section__list-wrapper">
                             <h3 class="info-section__list-title">24 / 7 Support</h3>
                             <p class="info-section__list-description">Vivamus vel quam lacinia, tincidunt dui non,
-                                vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .</p>
+                                vehicula nisi.</p>
                         </div>
                     </li>
                     <li class="info-section__list-item test-class">
