fix: fix code for pixelPerf

--- a/index.html
+++ b/index.html
@@ -295,10 +295,16 @@
                                 faucibus. Morbi at aliquet turpis, et consequat felis.
                             </div>
                             <div class="form-container__contacts">
-                                <address><a href="#" class="form-container__adress"> Elm St. 14/05 Lost City </a>
+                                <address><a href="#" class="form-container__adress"><span
+                                            class="form-container__decorative-image form-container__decorative-image--location"></span>
+                                        Elm St. 14/05 Lost City </a>
                                 </address>
-                                <a href="tel:03528 331 86 35 " class="form-container__phone"> 03528 331 86 35 </a>
-                                <a href="info@singolo.com" class="form-container__mail"> info@singolo.com</a>
+                                <a href="tel:03528 331 86 35 " class="form-container__phone"><span
+                                        class="form-container__decorative-image form-container__decorative-image--phone"></span>
+                                    03528 331 86 35 </a>
+                                <a href="info@singolo.com" class="form-container__mail"><span
+                                        class="form-container__decorative-image form-container__decorative-image--mail"></span>
+                                    info@singolo.com</a>
                             </div>
                         </div>
                     </div>
