--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--<link rel="stylesheet" href="css/singolo1.css">
-    <link rel="stylesheet" href="css/singolo2.css">
-    <link rel="stylesheet" href="css/singolo3.css">-->
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap&subset=latin-ext"
         rel="stylesheet">
@@ -21,12 +18,11 @@
             <h1 class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
             <nav class="nav">
                 <ul class="nav__list hidden">
-                    <li class="nav__list-item"><span class="red-color-style"><a href="#"
-                                class="nav__link">home</a></span></li>
-                    <li class="nav__list-item"><a href="#" class="nav__link">services</a></li>
-                    <li class="nav__list-item"><a href="singolo2.html" class="nav__link">portfolio</a></li>
-                    <li class="nav__list-item"><a href="#" class="nav__link">about</a></li>
-                    <li class="nav__list-item"><a href="#" class="nav__link">contact</a></li>
+                    <li class="nav__list-item"><a href="#" class="nav__link">home</a></li>
+                    <li class="nav__list-item"><a href="#services" class="nav__link">services</a></li>
+                    <li class="nav__list-item"><a href="#portfolio" class="nav__link">portfolio</a></li>
+                    <li class="nav__list-item"><a href="#about-us" class="nav__link">about</a></li>
+                    <li class="nav__list-item"><a href="#form" class="nav__link">contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -65,6 +61,7 @@
         </section>
 
         <section class="info-section">
+            <a name="services" class=""></a>
             <div class="wrapper">
                 <h2 class="info-section__title">Our Services</h2>
                 <p class="info-section__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
@@ -126,6 +123,7 @@
         </section>
 
         <section class="portoflio-section">
+            <a name="portfolio"></a>
             <div class="wrapper">
                 <h2 class="portoflio-section__title second-level-title">Portfolio</h2>
                 <p class="portoflio-section__description section-description">Duis mollis, est non commodo luctus, nisi
@@ -187,6 +185,7 @@
         </section>
 
         <section class="about-us-section">
+            <a name="about-us"></a>
             <article class="about-us">
                 <div class="wrapper">
                     <h2 class="about-us__title second-level-title">About Us</h2>
@@ -260,7 +259,8 @@
             </article>
         </section>
 
-        <section class="fotm-section">
+        <section class="form-section">
+            <a name="form"></a>
             <article class="form-article">
                 <div class="wrapper">
                     <h2 class="form-article__main-title second-level-title">Get a Quote</h2>
