feat: add submit button in form-group

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                                 <textarea class="main-form__text-input main-form__text-input--textarea"
                                     placeholder="Describe your project in detail..." name="user-comment" id="" cols="30"
                                     rows="8"></textarea>
+                                    <button class="main-form__button">Submit</button>
                             </fieldset>
                         </form>
                         <div class="form-container__contacts-container">
