feat: add tab-sort

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div class="wrapper">
                     <div class="slider-section__wrapper">
                         <div id="slide-one">
-                            <div class="slider-section__image-one"></div>
-                            <div class="slider-section__image-two"></div>
+                            <div class="slider-section__image-one"><div></div></div>
+                            <div class="slider-section__image-two"><div></div></div>
                         </div>
-                        <div id="slide-two" style="opacity: 0;">
+                        <div id="slide-two" style="display: none;">
                             <div class="slider-section__image-one--second-slide"></div>
                         </div>
                     </div>
