feat: add header-anchors, fix header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
             <nav class="nav">
                 <ul class="nav__list hidden">
-                    <li class="nav__list-item"><a href="#" class="nav__link">home</a></li>
+                    <li class="nav__list-item"><a href="#home" class="nav__link">home</a></li>
                     <li class="nav__list-item"><a href="#services" class="nav__link">services</a></li>
                     <li class="nav__list-item"><a href="#portfolio" class="nav__link">portfolio</a></li>
                     <li class="nav__list-item"><a href="#about-us" class="nav__link">about</a></li>
@@ -31,6 +31,7 @@
 
     <main class="main">
         <section class="slider-section">
+            <a class="anchor" name="home"></a>
             <div class="slider-section__background">
                 <div class="wrapper">
                     <div class="slider-section__wrapper">
@@ -66,7 +67,7 @@
         </section>
 
         <section class="info-section">
-            <a name="services" class=""></a>
+            <a class="anchor" name="services" class=""></a>
             <div class="wrapper">
                 <h2 class="info-section__title">Our Services</h2>
                 <p class="info-section__description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
@@ -128,7 +129,7 @@
         </section>
 
         <section class="portoflio-section">
-            <a name="portfolio"></a>
+            <a class="anchor" name="portfolio"></a>
             <div class="wrapper">
                 <h2 class="portoflio-section__title second-level-title">Portfolio</h2>
                 <p class="portoflio-section__description section-description">Duis mollis, est non commodo luctus, nisi
@@ -190,7 +191,7 @@
         </section>
 
         <section class="about-us-section">
-            <a name="about-us"></a>
+            <a class="anchor" name="about-us"></a>
             <article class="about-us">
                 <div class="wrapper">
                     <h2 class="about-us__title second-level-title">About Us</h2>
@@ -265,7 +266,7 @@
         </section>
 
         <section class="form-section">
-            <a name="form"></a>
+            <a class="anchor" name="form"></a>
             <article class="form-article">
                 <div class="wrapper">
                     <h2 class="form-article__main-title second-level-title">Get a Quote</h2>
