feat: add header controll

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-container">
             <h1 class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
             <nav class="nav">
-                <ul class="nav__list hidden">
+                <ul class="nav__list">
                     <li class="nav__list-item"><a href="#home" class="nav__link">home</a></li>
                     <li class="nav__list-item"><a href="#services" class="nav__link">services</a></li>
                     <li class="nav__list-item"><a href="#portfolio" class="nav__link">portfolio</a></li>
@@ -32,12 +32,12 @@
     <main class="main">
 
         <section class="slider-section">
-            <a class="anchor" name="home"></a>
+            <a class="anchor anchor--slider-section" name="home"></a>
 
 
             <div class="slider-section__test-wrapper">
 
-                <div  id="slide-one" class="slider-section__slider-item slider-section__slider-item--active slider-section__slider-item--first-slide">
+                <div class="slider-section__slider-item slider-section__slider-item--active slider-section__slider-item--first-slide">
                     <div class="wrapper">
                         <div class="slider-section__wrapper">
                             <div>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
 
-                <div  id="slide-two" class="slider-section__slider-item slider-section__slider-item--second-slide">
+                <div class="slider-section__slider-item slider-section__slider-item--second-slide">
                     <div class="wrapper">
                         <div class="slider-section__wrapper">
                             <div id="slide-two">
