fix: too much fixes(adaptive, javascript-task)

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
     <header class="header">
         <div class="header-container">
-            <h1 class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
-            <nav class="nav">
+            <div id="burger" class="header-container__burger-menu">
+                <div class="burger-button"></div>
+            </div>
+            <h1 id="logo" class="header__logo main-title">SINGOLO<span class="red-color-style">*</span></h1>
+            <nav id="header-menu" class="nav nav--hiden">
                 <ul class="nav__list">
                     <li class="nav__list-item"><a href="#home" class="nav__link">home</a></li>
                     <li class="nav__list-item"><a href="#services" class="nav__link">services</a></li>
@@ -48,7 +51,6 @@
                             <div class="slider-section__image-two">
                                 <div></div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -362,6 +364,7 @@
         </div>
     </footer>
 
+    <script src="scripts/burger-button.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 
