fix: final fixes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <!--Тутай конец тест врапера-->
 
-            <div class="slider-section__decorative-block"></div>
+            <!--<div class="slider-section__decorative-block"></div>-->
         </section>
 
         <section class="info-section">
